--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,12 +4,13 @@ version = "0.1.0"
 description = ""
 authors = ["pl <0x00.pl@gmail.com>"]
 readme = "README.md"
-packages = [{include = "bloom_example"}]
+packages = [{include = "torch_model_info_collector"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
 transformers = "^4.30.2"
 torch = "^2.0.1"
+matplotlib = "^3.7.2"
 
 
 [[tool.poetry.source]]
