--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.10"
 transformers = "^4.30.2"
 torch = "^2.0.1"
 matplotlib = "^3.7.2"
+datasets = "^2.13.1"
 
 
 [[tool.poetry.source]]
